# OpenGL-Engine-New

./: .gitignore  CMakeLists.txt
OpenGLModern/Includes/: main.h
OpenGLModern/Includes/Cube/: Cube.hpp
OpenGLModern/Includes/Engine/: GameObject.hpp  RenderContext.hpp
OpenGLModern/Includes/Engine/GameObjectComponents/: Component.hpp  MeshRenderer.hpp
OpenGLModern/Includes/Engine/Managers/: GameObjectManager.hpp  InputManager.hpp  LightManager.hpp  ServiceLocator.hpp
OpenGLModern/Includes/GameObjects/Camera/: Camera.hpp
OpenGLModern/Includes/OPENGL/glad/: glad.h
OpenGLModern/Includes/Shader/: Shader.hpp
OpenGLModern/Includes/Texture/: Texture.hpp
OpenGLModern/OPENGL/glad/: glad.c
OpenGLModern/Shaders/TestShaders/Modules/: Lighting.glsl
OpenGLModern/src/: main.cpp
OpenGLModern/src/Cube/: Cube.cpp
OpenGLModern/src/Engine/: GameObjectManager.cpp  RenderContext.cpp
OpenGLModern/src/Engine/GameObjectComponents/: MeshRenderer.cpp
OpenGLModern/src/GameObjects/Camera/: Camera.cpp
OpenGLModern/src/Shader/: Shader.cpp
OpenGLModern/src/Texture/: Texture.cpp
Testing/: mainTests.cpp
Testing/Shaders/: ShaderTest.cpp
